# aggregator_old

./: .env.example  Makefile  README.md  pyproject.toml
deploy/: Dockerfile
homepp/: __main__.py
homepp/config/: logging_config.ini  settings.py
homepp/core/protocols/: event_publisher.py  socket_gateway.py  socket_manager.py
homepp/infrastructure/queue/: event_publisher.py
homepp/infrastructure/sockets/: socket_gateway.py  socket_manager.py
homepp/presentation/ws/: factory.py  handler.py  types.py
